Configuration pour le déploiement automatique sur GitHub Pages avec domaine personnalisé creatio.paris

--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/creatio-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creatio - Application React</title>
+    <meta
+      name="description"
+      content="Creatio - Vos cours, prêts. Vos apprenants, engagés. Création de supports pédagogiques professionnels : programmes, slides, évaluations. Des cours informatifs, pas rébarbatifs."
+    />
+    <meta
+      name="keywords"
+      content="formation, pédagogie, cours, slides, évaluations, programmes, supports pédagogiques, Qualiopi"
+    />
+    <meta name="author" content="Creatio" />
+    <meta
+      property="og:title"
+      content="Creatio - Vos cours, prêts. Vos apprenants, engagés."
+    />
+    <meta
+      property="og:description"
+      content="Création de supports pédagogiques professionnels : programmes, slides, évaluations. Des cours informatifs, pas rébarbatifs."
+    />
+    <meta property="og:type" content="website" />
+    <title>Creatio - Vos cours, prêts. Vos apprenants, engagés.</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
